--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       $("input").focus(function(){
         $(this).css("background-color","#cccccc");
     });
-    $("input").blur(function(){
-      $(this).css("background-color","#ffffff");
-  });
+      $("input").blur(function(){
+        $(this).css("background-color","#ffffff");
+    });
 });
 </script>
 
@@ -77,13 +77,13 @@ ul{
 
   <h1>How to Cast Your Hand</h1>
 <div class="img">
- <a target="_blank" href="casting1.htm">
- 	<img src="casting1.jpg" alt="Casted hand" width="600" height="600"></a><br>
+ <a target="_blank" href="../instructional/casting1.htm">
+ 	<img src="../instructional/casting1.jpg" alt="Casted hand" width="600" height="600"></a><br>
 </div>
 
 
 <div class="img">
- <a target="_blank" href="casting2.htm"><img src="casting2.jpg" alt="Materials" width="600" height="400"></a>
+ <a target="_blank" href="casting2.htm"><img src="../instructional/casting2.jpg" alt="step1" width="600" height="400"></a>
  <div class="desc"><strong>STEP 1: Get materials</strong>
  	<ul>
  		<li><a href="http://www.amazon.com/Smooth-Alja-Safe-Alginate-3-lb-Box/dp/B000KVSU60">Alja-Safe Alginate 3-lb Box</a></li>
@@ -101,7 +101,7 @@ ul{
 </div>
 
 <div class="img">
- <a target="_blank" href="casting3.htm"><img src="casting3.jpg" alt="Materials" width="600" height="400"></a>
+ <a target="_blank" href="casting3.htm"><img src="../instructional/casting3.jpg" alt="step2" width="600" height="400"></a>
  <div class="desc"><strong>STEP 2: Mix the alginate with water</strong> 
  	<br>1:1 ratio (about 40oz of each)
 
@@ -111,7 +111,7 @@ ul{
 </div>
 
 <div class="img">
- <a target="_blank" href="casting4.htm"><img src="casting4.jpg" alt="Materials" width="600" height="400"></a>
+ <a target="_blank" href="casting4.htm"><img src="../instructional/casting4.jpg" alt="step3" width="600" height="400"></a>
  <div class="desc"><strong>STEP 3: Immediately pour alginate into pitcher</strong>
  
  <br><strong>Notes:</strong> <input type="text" name="notes"
@@ -120,7 +120,7 @@ ul{
 </div>
 
 <div class="img">
- <a target="_blank" href="casting5.htm"><img src="casting5.jpg" alt="Materials" width="600" height="400"></a>
+ <a target="_blank" href="casting5.htm"><img src="../instructional/casting5.jpg" alt="step4" width="600" height="400"></a>
  <div class="desc"><strong>STEP 4: Immediately place hand in liquid alginate</strong>
  	<br>
  	Hold in place for 8min as alginate sets
@@ -131,7 +131,7 @@ ul{
 </div>
 
 <div class="img">
- <a target="_blank" href="casting6.htm"><img src="casting6.jpg" alt="Materials" width="600" height="400"></a>
+ <a target="_blank" href="casting6.htm"><img src="../instructional/casting6.jpg" alt="step5" width="600" height="400"></a>
  <div class="desc"><strong>STEP 5: Gently remove hand from mold</strong>
 
  <br><strong>Notes:</strong> <input type="text" name="notes"
@@ -140,7 +140,7 @@ ul{
 </div>
 
 <div class="img">
- <a target="_blank" href="casting9.htm"><img src="casting9.jpg" alt="Materials" width="600" height="400"></a>
+ <a target="_blank" href="casting9.htm"><img src="../instructional/casting9.jpg" alt="step6" width="600" height="400"></a>
  <div class="desc"><strong>STEP 6: Prepare the plaster</strong>
  	<ul>
  		<li>Sift plaster into water and let sit untouched about 2min</li>
@@ -153,7 +153,7 @@ ul{
 </div>
 
 <div class="img">
- <a target="_blank" href="casting8.htm"><img src="casting8.jpg" alt="Materials" width="600" height="400"></a>
+ <a target="_blank" href="casting8.htm"><img src="../instructional/casting8.jpg" alt="step7" width="600" height="400"></a>
  <div class="desc"><strong>STEP 7: Vigorously mix the plaster in a circular motion</strong>
  	<br>Be weary of air bubbles
 
@@ -163,7 +163,7 @@ ul{
 </div>
 
 <div class="img">
- <a target="_blank" href="casting1.htm"><img src="casting1.jpg" alt="Materials" width="600" height="600"></a>
+ <a target="_blank" href="casting1.htm"><img src="casting1.jpg" alt="step8" width="600" height="600"></a>
   <div class="desc"><strong>Finished product</strong>
 </div>
 
