fixed image formatting issue

--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@
     font-weight: bold;
   }
   
-div.img {
+img {
     margin: 5px;
     padding: 5px;
     height: auto;
-    float: left;
     width-max: 612px;
     text-align: left;
     display: block;
 }	
 
-div.img a:hover img {
+img:hover {
     border: 1px solid #2b2a2a;
     This is causing some trouble. I can't get the alignment
     right here. And every time I hover over the first
